[package]
name = "pycavy-new"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "pycavy"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0"

[dependencies.cavy]
path = "../cavy-rs/cavy"
# Don't want to include comptime feature
default-features = false

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
