[package]
name = "pycavy"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "pycavy"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0"

[dependencies.cavy]
path = "../cavy-lang/cavy"
# Don't want to include inline-cavy feature, which is useless without a Rust
# compiler
default-features = false

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
